<resources>
    <string name="app_name">Soulmate</string>
    <string name="appication_name">Soulmate</string>
    <string name="login_page_icon">icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="button_login">Log-In</string>
    <string name="button_register">Register</string>
    <string name="register_title">Let\'s Register</string>
    <string name="username">Name</string>
    <string name="user_phone">Mobile No</string>
    <string name="user_birthday">Date of Birth</string>
    <string name="user_gender">Gender\n</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_verification">Email Verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="getCode">Get Code</string>
    <string name="submit">Submit</string>
    <string name="phone_verification">Mobile Number Verification</string>
    <string name="side_menu_icon">Side Menu</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="home_icon">Home Icon</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="medical_history">Medical History</string>
    <string name="date_tracking">Date Tracking</string>
    <string name="telemedicine">Telemedicine</string>
    <string name="setting_button">Settings</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="emergency_call2">#Emergency Call</string>
    <string name="title_activity_main_page">main_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_medical_history">Medical History</string>
    <string name="menu_date_tracking">Date Tracking</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_telemedicine">Telemedicine</string>
    <string name="floating_icon">Floating Icon</string>
    <string name="title_activity_emergency_call">EmergencyCall</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="contact_us">Contact Us</string>
    <string name="menu_emergency_call">Emergency Call</string>
    <string name="title_activity_date_tracking">dateTracking</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="contactUsDescription">\n Call: 03-1523 4598 \n ( 8am - 7am )\n \n  Chat via WhatsApp: +6017-325 7899 \n ( 7am - 12am )\n\n  E-mail: soulmate-help@gmail.com
        \n ( You will receive a reply in 24 hours )
    </string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_healthTracking">Health Tracking</string>
    <string name="menu_appointment">Appointment</string>
    <string name="addReminder">Add Reminder</string>
    <string name="map_content_description">Google Map View</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDSTtlxPDoYXft1J0h1HHTxotYzxnJEHPw</string>


    <string name="username_or_pwd_miss">Username or password is empty</string>
    <string name="sign_up_success">Sign up success!</string>
    <string name="sign_in_success">Sign in success!</string>
    <string name="sign_out_success">Sign out success!</string>
    <string name="send_message_success">Send message success!</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_to_username">Enter to username</string>
    <string name="start_chat">Start chat</string>
    <string name="enter_content">Enter content</string>
    <string name="log_hint">Show log area...</string>
    <string name="has_login_before">An account has been signed in, please sign out first and then sign in</string>
    <string name="sign_in_first">Please sign in first</string>
    <string name="not_find_send_name">Please enter the username who you want to send first!</string>
    <string name="health_tracking_instruction">Please fill in your health status, we will analyze it and provide a result for you.</string>

    <string name="app_key">41117440#383391</string>

    <string name="clinic_hospitals">Clinic / Hospital</string>
    <string name="vaccination_button">Vaccination</string>
    <string name="blood_donation">Blood Donation</string>
    <string name="title_activity_admin_main_page">AdminMainPage</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>