<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.soulmate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_popUpCallFragment2"
            app:destination="@id/popUpCallFragment2" />
        <action
            android:id="@+id/action_popUpCallFragment2_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_popUpCallFragment2_to_emergencyCall3"
            app:destination="@id/emergencyCall3" />
    </fragment>

    <fragment
        android:id="@+id/nav_medical_history"
        android:name="com.example.soulmate.ui.medicalHistory.MedicalHistoryFragment"
        android:label="@string/menu_medical_history"
        tools:layout="@layout/fragment_medical_history" />

    <fragment
        android:id="@+id/nav_date_tracking"
        android:name="com.example.soulmate.ui.dateTracking.DateTrackingFragment"
        android:label="@string/menu_date_tracking"
        tools:layout="@layout/fragment_date_tracking" />
    <fragment
        android:id="@+id/nav_telemedicine"
        android:name="com.example.soulmate.ui.telemedicine.TelemedicineFragment"
        android:label="@string/menu_telemedicine"
        tools:layout="@layout/fragment_telemedicine" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.soulmate.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_reminder"
        android:name="com.example.soulmate.ui.reminder.ReminderFragment"
        android:label="@string/menu_reminder"
        tools:layout="@layout/fragment_reminder" >
        <action
            android:id="@+id/action_popUpReminderFragment_to_nav_reminder"
            app:destination="@id/nav_reminder" />
    </fragment>
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.soulmate.ui.contactUs.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />
    <dialog
        android:id="@+id/popUpCallFragment2"
        android:name="com.example.soulmate.PopUpCallFragment"
        android:label="fragment_pop_up_call"
        tools:layout="@layout/fragment_pop_up_call" >
    </dialog>
    <fragment
        android:id="@+id/emergencyCall3"
        android:name="com.example.soulmate.EmergencyCall"
        android:label="fragment_emergency_call"
        tools:layout="@layout/fragment_emergency_call" />
    <dialog
        android:id="@+id/popUpReminderFragment"
        android:name="com.example.soulmate.PopUpReminderFragment"
        android:label="fragment_pop_up_reminder"
        tools:layout="@layout/fragment_pop_up_reminder" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.soulmate.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <action
        android:id="@+id/action_global_login"
        app:destination="@id/mainActivity" />
</navigation>